1999-08-12  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: lseek -> seek.

1999-08-04  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: tests for buffered and unbuffered input/output
	fports with seeking.

1999-08-01  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/r4rs.test (SECTION 3 4): Each element of type-matrix
	corresponds to an example object, not a predicate.  Aubrey
	probably never noticed this because SCM doesn't check the lengths
	of the arguments to for-each and map...

	* tests/ports.test: Add some regression tests for char-ready?.

1999-07-19  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/ports.test: Fix copyright years.

	* tests/guardians.test: New test file.

	* tests/ports.test ("read-delimited!"): New tests.

1999-06-19  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/interp.test: New file.

1999-06-15  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/time.test: New test file.

	* tests/r4rs.test: New set of tests, taken from Guile's test
	script, taken from SCM.

	* tests/ports.test: Group the string port tests under a new
	test name prefix.

	* tests/ports.test ("line counter"): Check the final column, too.

	* lib.scm: Import (test-suite paths).
	(data-file): New exported function.

1999-06-12  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/ports.test ("line counter"): Add test for correct column
	at EOF.

1999-06-09  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/ports.test ("line counter"): Verify that we do eventually
	get EOF on the port --- don't just read forever.

	* lib.scm (full-reporter): The test name is the cadr of the
	result, not the cdr.  I'm not macho enough to handle run-time
	typechecking.

	* lib.scm (print-counts): XFAILS are "expected failures", not
	"unexpected failures."

	* lib.scm, guile-test, paths.scm: Log begins.
